--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,6 +42,7 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
   }
   &__logo {
     height: 65px;
@@ -65,7 +66,7 @@ html {
       height: 100%;
       border: none;
       border-radius: 15.5px;
-      padding-left: 50px;
+      padding: 0 10px 0 50px;
     }
   }
   &__buttons {
@@ -73,22 +74,22 @@ html {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    z-index: 100;
   }
   &__menu {
     position: absolute;
     top: 0;
     right: 0;
-    background: #fff;
-    padding: 74px 62px 80px 74px;
-    z-index: 10;
+    z-index: auto;
     opacity: 0;
     transition: all 0.3s ease-out;
+    padding: 0 0 80px 74px;
     &--button {
       width: 100%;
       display: flex;
       justify-content: space-between;
-      margin-bottom: 53px;
+      align-items: center;
+      height: 65px;
+      margin-bottom: 30px;
       &-language {
         font-size: 24px;
         line-height: 31px;
@@ -128,6 +129,17 @@ html {
         width: 25px;
       }
     }
+    &--fone {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: -10;
+      padding: 1000px;
+      background-color: #fff;
+    }
+  }
+  .menu-changed {
+    opacity: 1;
   }
 }
 .main {
